# autodq-analytics

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  ms-python.black-formatter-2026.6.0.vsix  pyproject.toml  report.html  requirements.txt
.github/workflows/: publish-pypi.yml  publish-testpypi.yml  publish-vscode.yml  tests.yml
docs/: ADQL_SPEC.md  API_REFERENCE.md  ARCHITECTURE.md  DECISION_LOG.md  QUICKSTART.md  RELEASE_NOTES_0.1.0.md  RELEASING.md  RESEARCH_NOTES.md  ROADMAP.md  TROUBLESHOOTING.md  VSCODE_MARKETPLACE.md
examples/: adql_demo.py  dashboard_generator_demo.py  interactive_cleaning_review_demo.py  model_persistence_demo.py  prediction_uncertainty_demo.py  project_auto_demo.py  rich_notebook_visualizations.py  sales_analysis.adql  sales_auto.adql  shap_plots_demo.py  workspace_demo.py
models/adql-sales-revenue-model/: manifest.json
notebooks/: test_autodq.ipynb  test_autodq.py
notebooks/reports/: autodq-dashboard.html
reports/: adql-sales-auto-report.html  adql-sales-cleaning-audit.json  adql-sales-dashboard.html  adql-sales-report.html  autodq_blue_complete.html  autodq_blue_visuals.html  autodq_dark.html  autodq_executive.html  autodq_explainability.html  autodq_print.html  autodq_report.html  boxplot_report.html  correlation_report.html  histogram_report.html  ml_prediction_report.html  ml_prediction_report_dark.html
scripts/: check_distribution.py  smoke_test_wheel.py
src/autodq/: __init__.py  __main__.py  _version.py  cli.py
src/autodq.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/autodq/auto/: __init__.py  engine.py  models.py  notebook_renderer.py
src/autodq/blue/: engine.py  models.py  prescriptions.py  visual_interpreter.py  visualizer.py
src/autodq/cleaning/: engine.py
src/autodq/commands/: __init__.py  cells.py  errors.py  executor.py  grammar.py  models.py  parser.py  runner.py  validator.py
src/autodq/core/: project.py  session.py  state.py
src/autodq/correlation/: engine.py  models.py
src/autodq/dashboard/: __init__.py  engine.py  html_renderer.py  models.py
src/autodq/datasets/: manager.py  merger.py  models.py
src/autodq/decision/: engine.py
src/autodq/diagnosis/: duplicates.py  engine.py  missingness.py  outliers.py
src/autodq/explainability/: engine.py  models.py  shap_visualizer.py
src/autodq/features/: engine.py  models.py
src/autodq/interpretation/: engine.py  models.py  statistics.py
src/autodq/io/: loaders.py
src/autodq/knowledge/: engine.py  library.py  rules.py
src/autodq/ml/: engine.py  evaluator.py  model_selector.py  models.py  preprocessing.py  trainer.py
src/autodq/ml_readiness/: engine.py  models.py
src/autodq/models/: cleaning.py  issues.py  preview.py  recommendations.py  report.py  reports.py  validation.py  visuals.py
src/autodq/persistence/: __init__.py  engine.py  models.py
src/autodq/plugins/: manager.py  types.py
src/autodq/prediction/: engine.py  models.py
src/autodq/preview/: engine.py
src/autodq/profiling/: profiler.py
src/autodq/recommendations/: engine.py
src/autodq/reporting/: engine.py  html_exporter.py  json_exporter.py
tests/: test_adql_files_cli.py  test_cleaning_review.py  test_commands.py  test_dashboard_generator.py  test_model_persistence.py  test_packaging.py  test_prediction_uncertainty.py  test_project_auto.py  test_release_acceptance.py  test_rich_visualizations.py  test_shap_plots.py  test_workspaces.py
(+59 files in other folders)
