[project]
name = "autodq"
version = "0.1.0"
description = "AutoDQ Analytics: Automated Data Quality, Cleaning, Visualization, and Reporting Framework"
authors = [
    { name = "Joseph Ubani" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "joblib",
    "matplotlib",
    "seaborn",
    "openpyxl",
    "pyyaml",
    "streamlit"
]

[project.scripts]
autodq = "autodq.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"autodq.vscode" = [
    "extension/*",
    "extension/syntaxes/*",
]
