[project]
name = "autodq"
description = "AutoDQ Analytics: Automated Data Quality, Cleaning, Visualization, and Reporting Framework"
authors = [
    { name = "Joseph Ubani" }
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version"]
keywords = [
    "analytics",
    "data-cleaning",
    "data-quality",
    "data-science",
    "machine-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "joblib>=1.3",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "shap>=0.44",
    "statsmodels>=0.14",
    "xlrd>=2.0.1",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "twine>=6.0",
]

[project.scripts]
autodq = "autodq.cli:main"

[project.urls]
Homepage = "https://github.com/josephubani/autodq-analytics"
Issues = "https://github.com/josephubani/autodq-analytics/issues"
Repository = "https://github.com/josephubani/autodq-analytics.git"

[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["autodq*"]
namespaces = true

[tool.setuptools.dynamic]
version = { attr = "autodq._version.__version__" }

[tool.setuptools.package-data]
"autodq.vscode" = [
    "extension/*",
    "extension/icons/*",
    "extension/syntaxes/*",
]
